<resources>
  <string name="app_name">Passbolt POC</string>

  <string name="not_implemented">Not implemented yet</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="go_to_settings">Go to settings</string>
  <string name="info">Info</string>
  <string name="error">Error</string>
  <string name="unknown_error">Unknown error</string>
  <string name="password">Password</string>
  <string name="username">Username</string>
  <string name="clear">Clear</string>
  <string name="login">Login</string>
  <string name="operation_time">Operation took %1$d milliseconds</string>

  <!--  milestones -->
  <string name="milestone_encryption">Encryption library POC</string>
  <string name="milestone_setup">Setup POC</string>
  <string name="milestone_secure_storage">Secure storage POC</string>
  <string name="milestone_autofill">Autofill POC</string>

  <!-- encryption milestone -->
  <string name="encryption_encrypt_decrypt">Encrypt/Decrypt POC</string>
  <string name="encryption_sign_verify">Sign/Verify POC</string>
  <string name="private_key">Private key</string>
  <string name="public_key">Public key</string>
  <string name="encrypt">Encrypt</string>
  <string name="decrypt">Decrypt</string>
  <string name="message">Message</string>
  <string name="placeholder_message_encrypt">Paste or enter a message you want to encrypt or decrypt.</string>
  <string name="key">Key</string>
  <string name="placeholder_key">Paste or enter a public or private gpg key or use one of the buttons to fill this field with a predefined public or private key.</string>
  <string name="result">Result</string>
  <string name="keys_info">The keys are rsa3072 keys and were generated using gpg tool on MacOS.</string>

  <!-- sign verify milestone -->
  <string name="sign">Sign</string>
  <string name="verify">Verify</string>
  <string name="placeholder_message_sign">Paste or enter a message you want to sign or verify.</string>

  <!-- autofill milestone -->
  <string name="autofill">Autofill POC</string>
  <string name="autofill_test">Autofill test</string>
  <string name="autofill_settings">Autofill settings</string>
  <string name="autofill_not_supported">This device doesn\'t support auto fill</string>
  <string name="autofill_already_enabled">This auto fill service is already enabled</string>
  <string name="autofill_enable">Enable autofill</string>
  <string name="autofill_service">Passbolt POC Autofill Service</string>
  <string name="autofill_edittext_header">Sample Login Using EditTexts</string>
  <string name="autofill_webview_header">Sample Login Using WebView</string>
  <string name="autofill_key_not_present_in_secure_storage">Error private key or password was not present in secure storage. Go to Secure Storage POC and save KEY 1 in Secure Storage.</string>
  <string name="autofill_auth_activity_label">Auth</string>
  <string name="autofill_manual_fill_activity_label">Manual fill</string>
  <string name="autofill_unencrypted_dataset">Unencrypted dataset</string>
  <string name="autofill_encrypted_dataset">Encrypted dataset</string>

  <string name="biometric_prompt_title">Biometric login for Passbolt POC app</string>
  <string name="biometric_prompt_subtitle">Log in using your biometric credential or use PIN</string>

  <!--  secure storage milestone -->
  <string name="securestorage">Secure Storage POC</string>
  <string name="securestorage_key_pair1">Use key 1</string>
  <string name="securestorage_key_pair2">Use key 2</string>
  <string name="securestorage_auth_required">Authentication is required to perform this action</string>
  <string name="securestorage_read_keys_auth">Read keys (auth)</string>
  <string name="securestorage_read_keys_no_auth">Read keys (no auth)</string>
  <string name="securestorage_save_keys_auth">Save keys (auth)</string>
  <string name="securestorage_save_keys_no_auth">Save keys (no auth)</string>
  <string name="securestorage_clear_encrypted_storage">Clear encrypted storage</string>
  <string name="secure_storage_device_not_secure_message">Secure Storage won\'t work because this device is not secured with a PIN, pattern or password.</string>
  <string name="securestorage_error_reading_from_storage">Error while reading private key and password from secure storage.</string>

  <!--  setup milestone -->
  <string name="setup">Setup POC</string>
  <string name="setup_start">Start Setup</string>
  <string name="setup_instruction">During the setup process you\'ll be shown a series of QR codes. Keep the phone still and point it at QR codes. Wait unitl the process is finished. In case of any error you can close the setup process and start again.</string>
  <string name="setup_image_processing_failed">Failed to process image.</string>
  <string name="setup_camera_setup_failed">Unknown error occurred while setting up camera.</string>
  <string name="setup_camera_permission_required">Camera permission is required to start the setup process.</string>
</resources>
