<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/milestonesFragment">

  <activity
      android:id="@+id/autofillSettingsActivity"
      android:name="com.passbolt.poc.milestones.autofill.settings.AutofillSettingsActivity"
      android:label="@string/autofill_settings" />

  <fragment
      android:id="@+id/encryptionFragment"
      android:name="com.passbolt.poc.milestones.encryption.EncryptionFragment"
      android:label="@string/milestone_encryption">
    <action
        android:id="@+id/action_encryptionFragment_to_encryptDecryptFragment"
        app:destination="@id/encryptDecryptFragment" />
    <action
        android:id="@+id/action_encryptionFragment_to_signVerifyFragment"
        app:destination="@id/signVerifyFragment" />
  </fragment>

  <fragment
      android:id="@+id/encryptDecryptFragment"
      android:name="com.passbolt.poc.milestones.encryption.encryptdecrypt.EncryptDecryptFragment"
      android:label="@string/encryption_encrypt_decrypt" />

  <fragment
      android:id="@+id/signVerifyFragment"
      android:name="com.passbolt.poc.milestones.encryption.signverify.SignVerifyFragment"
      android:label="@string/encryption_sign_verify" />

  <fragment
      android:id="@+id/autofillFragment"
      android:name="com.passbolt.poc.milestones.autofill.AutofillFragment"
      android:label="@string/autofill">
    <action
        android:id="@+id/action_autofillFragment_to_autofillTestFragment"
        app:destination="@id/autofillTestFragment" />
    <action
        android:id="@+id/action_autofillFragment_to_autofillSettingsActivity"
        app:destination="@id/autofillSettingsActivity" />
  </fragment>

  <fragment
      android:id="@+id/autofillTestFragment"
      android:name="com.passbolt.poc.milestones.autofill.test.AutofillTestFragment"
      android:label="@string/autofill_test">
    <action
        android:id="@+id/action_autofillTestFragment_to_autofillWebViewTestFragment"
        app:destination="@id/autofillWebViewTestFragment" />
    <action
        android:id="@+id/action_autofillTestFragment_to_autofillEditTextTestFragment"
        app:destination="@id/autofillEditTextTestFragment" />
  </fragment>

  <fragment
      android:id="@+id/autofillEditTextTestFragment"
      android:name="com.passbolt.poc.milestones.autofill.test.edittext.AutofillEditTextTestFragment"
      android:label="@string/autofill_edittext_header" />

  <fragment
      android:id="@+id/autofillWebViewTestFragment"
      android:name="com.passbolt.poc.milestones.autofill.test.webview.AutofillWebViewTestFragment"
      android:label="@string/autofill_webview_header" />

  <fragment
      android:id="@+id/milestonesFragment"
      android:name="com.passbolt.poc.milestones.MilestonesFragment">
    <action
        android:id="@+id/action_milestonesFragment_to_encryptionFragment"
        app:destination="@id/encryptionFragment" />
    <action
        android:id="@+id/action_milestonesFragment_to_autofillFragment"
        app:destination="@id/autofillFragment" />
    <action
        android:id="@+id/action_milestonesFragment_to_securestorageFragment"
        app:destination="@id/securestorageFragment" />
    <action
        android:id="@+id/action_milestonesFragment_to_setupFragment"
        app:destination="@id/setupFragment" />
  </fragment>

  <fragment
      android:id="@+id/securestorageFragment"
      android:name="com.passbolt.poc.milestones.securestorage.SecureStorageFragment"
      android:label="@string/securestorage" />

  <fragment
      android:id="@+id/setupFragment"
      android:name="com.passbolt.poc.milestones.setup.SetupFragment"
      android:label="@string/setup">
    <action
        android:id="@+id/action_setupFragment_to_setupCameraFragment"
        app:destination="@id/setupCameraFragment" />
  </fragment>

  <fragment
      android:id="@+id/setupCameraFragment"
      android:name="com.passbolt.poc.milestones.setup.camera.CameraFragment"
      android:label="@string/setup" />
</navigation>