<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <Button
        android:id="@+id/button_key_pair1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/securestorage_key_pair1"
        app:layout_constraintEnd_toStartOf="@+id/button_key_pair2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_key_pair2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/securestorage_key_pair2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_key_pair1"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_read_keys_from_prefs_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/securestorage_read_keys_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        />

    <Button
        android:id="@+id/button_read_keys_from_prefs_no_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/securestorage_read_keys_no_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_read_keys_from_prefs_auth"
        />

    <Button
        android:id="@+id/button_save_keys_in_prefs_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/securestorage_save_keys_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_read_keys_from_prefs_no_auth"
        />

    <Button
        android:id="@+id/button_save_keys_in_prefs_no_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/securestorage_save_keys_no_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_keys_in_prefs_auth"
        />

    <Button
        android:id="@+id/button_clear_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/securestorage_clear_encrypted_storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_keys_in_prefs_no_auth"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/private_key_input"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/private_key_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:hint="@string/private_key"
        app:layout_constraintTop_toBottomOf="@+id/public_key_input"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/private_key_edit_text"
          android:layout_width="match_parent"
          android:layout_height="@dimen/key_edit_text_height"
          android:gravity="start"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/public_key_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/public_key"
        app:layout_constraintTop_toBottomOf="@+id/button_key_pair1"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/public_key_edit_text"
          android:layout_width="match_parent"
          android:layout_height="@dimen/key_edit_text_height"
          android:gravity="start"
          />
    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>