<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <Button
        android:id="@+id/button_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/private_key"
        app:layout_constraintEnd_toStartOf="@+id/button_public_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_input"
        />

    <Button
        android:id="@+id/button_public_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/public_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_private_key"
        app:layout_constraintTop_toBottomOf="@+id/message_input"
        />

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/encrypt"
        app:layout_constraintEnd_toStartOf="@+id/button_public_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        />
    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/decrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_private_key"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:placeholderText="@string/placeholder_message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/message_edit_text"
          android:layout_width="match_parent"
          android:layout_height="@dimen/message_edit_text_height"
          android:gravity="start"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/key"
        app:layout_constraintTop_toBottomOf="@+id/button_private_key"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:placeholderText="@string/placeholder_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/key_edit_text"
          android:layout_width="match_parent"
          android:layout_height="@dimen/key_edit_text_height"
          android:gravity="start"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/result_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_encrypt"
        app:layout_constraintVertical_bias="1.0"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/result_edit_text"
          android:layout_width="match_parent"
          android:layout_height="@dimen/result_edit_text_height"
          android:gravity="start"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/key_input"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />
    </com.google.android.material.textfield.TextInputLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>