<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:autofillHints="username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_username_text_view"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        />

    <TextView
        android:id="@+id/label_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:labelFor="@+id/password_edit_text"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:id="@+id/label_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:labelFor="@+id/username_edit_text"
        android:text="@string/username"
        app:layout_constraintBaseline_toBaselineOf="@+id/username_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.AppCompat.Body1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/clear"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toStartOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/login"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>